--- a/notebooks/00_testing_and_sketch.ipynb
+++ b/notebooks/00_testing_and_sketch.ipynb
@@ -2,12 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2d1f62d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dc0f548d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 80.,  85.,  90.,  95., 100., 105., 110., 115., 120.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(80, 120, 8 + 1)"
    ]
   },
   {
@@ -80,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "19c28730",
    "metadata": {},
    "outputs": [],
@@ -117,7 +138,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
+   "id": "c6bd8755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Option_types=[\"call\", \"put\"]\n",
+    "S1_values=list(np.linspace(80, 120, 8 + 1))\n",
+    "S2_values=list(np.linspace(80, 120, 8 + 1))\n",
+    "K1_values=[100]\n",
+    "K2_values=[100]\n",
+    "sigma1_values=[0.1, 0.2, 0.4, 0.6, 0.8],\n",
+    "sigma2_values=[0.1, 0.2, 0.4, 0.6, 0.8],\n",
+    "q1_values=[0.01, 0.02, 0.05]\n",
+    "q2_values=[0.01, 0.02, 0.05]\n",
+    "corr_values=[0.01, 0.2, 0.5, 0.8]\n",
+    "T_values=[0.08, 0.25, 0.5, 1.0, 1.5, 2.0, 5.0]\n",
+    "r_values=[0.01, 0.025, 0.05, 0.075, 0.1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "4427bc32",
    "metadata": {},
    "outputs": [
@@ -125,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of combinations: 153000\n"
+      "Number of combinations: 204120\n"
      ]
     }
    ],
@@ -133,7 +175,18 @@
     "n = sum(\n",
     "    1\n",
     "    for _ in product(\n",
-    "        Option_types, S_values, K_values, T_values, r_values, sigma_values, q_values\n",
+    "        Option_types,\n",
+    "        S1_values,\n",
+    "        S2_values,\n",
+    "        K1_values,\n",
+    "        K2_values,\n",
+    "        sigma1_values,\n",
+    "        sigma2_values,\n",
+    "        q1_values,\n",
+    "        q2_values,\n",
+    "        corr_values,\n",
+    "        T_values,\n",
+    "        r_values,\n",
     "    )\n",
     ")\n",
     "print(\"Number of combinations:\", n)"
