--- a/notebooks/01_EDA_European_Vanilla.ipynb
+++ b/notebooks/01_EDA_European_Vanilla.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6999519e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/options_dataset.csv\")"
+    "df = pd.read_csv(\"../data/01_raw/European_Vanilla_dataset.csv\")"
    ]
   },
   {
